--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,3 +33,13 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: php artisan test
+    - name: FTP-Deploy-Action
+      uses: Samkirkland/FTP-Deploy-Action@4.0.0
+      with:
+        server: ${{ secrets.FTP_SERVER}}
+        username: ${{ secrets.FTP_USERNAME}}
+        password: ${{ secrets.FTP_PASSWORD}}
+      
+  
+  
+   
