--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,6 +39,9 @@ jobs:
         server: ${{ secrets.FTP_SERVER}}
         username: ${{ secrets.FTP_USERNAME}}
         password: ${{ secrets.FTP_PASSWORD}}
+        exclude: |
+         **/.env
+         **/storage/**
       
   
   
