--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -41,6 +41,7 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD}}
         exclude: |
          **/.env
+         **/.env.*
          **/storage/**
       
   
